force-app/main/default/objects/LeanData__Meeting_Log__c/LeanData__Meeting_Log__c.object-meta.xml
<CustomObject>
    <description>___TBD___</description>
    <label>Meeting Log</label>
    <nameField>
        <label>Meeting Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>