force-app/main/default/objects/LeanData__Meeting_Log__c/fields/LeanData__Credit_Back_Status__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Credit_Back_Status__c</fullName>
    <label>Credit Back Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>