force-app/main/default/objects/LeanData__Meeting_Log__c/fields/LeanData__Event_Related_To__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Event_Related_To__c</fullName>
    <label>Event Related To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>