force-app/main/default/objects/LeanData__Meeting_Log__c/fields/LeanData__Event_Subject__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Event_Subject__c</fullName>
    <label>Event Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>