force-app/main/default/objects/LeanData__Meeting_Log__c/fields/LeanData__Handoff_Case__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Handoff_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Handoff Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>HandoffMeetingLogs</relationshipLabel>
    <relationshipName>HandoffMeetingLogs</relationshipName>
    <type>Lookup</type>
</CustomField>