force-app/main/default/objects/LeanData__Meeting_Log__c/fields/LeanData__Lead__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>MeetingLogs</relationshipLabel>
    <relationshipName>MeetingLogs</relationshipName>
    <type>Lookup</type>
</CustomField>