force-app/main/default/objects/LeanData__Meeting_Log__c/fields/LeanData__Meeting_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Meeting_Type_Name__c</fullName>
    <label>Meeting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>