force-app/main/default/objects/LeanData__Meeting_Log__c/fields/LeanData__Scheduling_Link_Id__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Scheduling_Link_Id__c</fullName>
    <label>Scheduling Link Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>